# webtransportd

./: CMakeLists.txt  README.md
.github/workflows/: release.yml  webtransportd.yml
adapters/: autocert.c  autocert.h  child_process.c  child_process.h  cmdline.c  cmdline.h  env.c  env.h  log.c  log.h  main.c  transport_picoquic.c
adapters/windows/: webtransportd.exe.manifest  webtransportd.rc
core/: frame.c  frame.h  session.h  version.h
docs/: CONTRIBUTING.md
examples/: demo.html  shout.c
ports/: transport_port.h
prototypes/: handshake_echo_http3.c  http3_server_with_child.c  minimal_http3_client.c  minimal_http3_server.c
src/adapters/: child_output.c  log.c  transport_picoquic.c  wtd_wincompat.c
src/domain/: session.c  work_queue.c
src/include/: child_output.h  session.h  transport_picoquic.h  work_queue.h
src/include/ports/: child_port.h
tests/: autocert_test.c  child_output_test.c  child_process_test.c  cmdline_test.c  env_test.c  frame_fuzz_test.c  frame_helper_test.c  frame_test.c  handshake_concurrent_test.c  handshake_echo_test.c  handshake_static_test.c  handshake_test.c  help_test.c  log_test.c  picoquic_create_test.c  picoquic_link_test.c  selftest_test.c  version_test.c  windows_manifest_test.c  work_queue_test.c
tests/unit/: session_test.c
